<resources>
    <string name="app_name">BunnyHopperBLE</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_filter_uuid">Find Bunnies</string>
    ride_action
    <string name="ride_action">Select action tag</string>
    <string name="terrain_menu">Terrain type</string>
    <string name="front_sensor">SensorID</string>
    <string name="back_sensor">SensorID</string>
    <string name="menu_road">Road</string>
    <string name="menu_mix">Mix terrain</string>
    <string name="menu_rock">Rock garden</string>
    <string name="menu_bikepark">Bikepark</string>
    <string name="menu_rough">Mix rough</string>
    <string name="menu_pt">Pumptrack</string>
    <string name="menu_mud">Mix muddy</string>
    <string name="riding">Riding</string>
    <string name="manual">Manual</string>
    <string name="bh">Bunnyhop</string>
    <string name="wheely">Wheely</string>
    <string name="drop">Drop</string>
    <string name="turns">Turns</string>
    <string name="jump">Jump</string>
    <string name="cornering">Corner</string>
    <string name="switchback">Switchback</string>
    <string name="skidding">Skidding</string>
    <string name="trackstand">Trackstand</string>
    <string name="pickbike">Pick bike</string>
    <string name="main_act">Technique Selection</string>
    <string name="menu_filter_hr_uuid">Find HR sensor</string>
    <string name="menu_filter_speed_uuid">Find Speed sensor</string>
    <string name="menu_filter_cad_uuid">Find Cadence sensor</string>
    <string name="menu_filter_cpm_uuid">Find Power meter</string>
    <string name="menu_filter_nearby">Only nearby devices</string>
    <string name="bike_view">Main bike view</string>
    <string name="accelerometer">Accelerometer data</string>
    <string name="gyroscope">Gyroscope data</string>
    <string name="magnetometer">Magnetometer data</string>
    <string name="value">Value here</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="turn_on">On</string>
    <string name="turn_off">Off</string>
    <string name="title_led_state">LED</string>
    <string name="title_button_state">Record</string>
    <string name="title_save_state">Save</string>
    <string name="save_state">State</string>
    <string name="record_state">State</string>
    <string name="button_saved_pressed">Saved</string>
    <string name="saving">Saving...</string>
    <string name="uploading">Uploading...</string>
    <string name="button_saved_released">Not saved</string>
    <string name="button_upload">Upload</string>
    <string name="button_pressed">Recording</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_released">Stopped recording</string>
    <string name="button_unknown">Unknown</string>
    <string name="led_summary">Toggle the switch to turn the LED 3 on or off.</string>
    <string name="button_summary">Press the button to start recording.</string>
    <string name="bt_device">Device</string>

    <string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
    <string name="location_permission_info">From Android 6.0 Marshmallow onwards the application requires Location permission in order to scan for Bluetooth Low Energy devices.
      \n\nThis is because Bluetooth LE beacons, for example iBeacons or Eddystone, may be used to determine the phone\'s and user\'s location. <b>nRF Blinky</b> will not use this information in any way.</string>
    <string name="location_permission_action">Grant permission</string>
    <string name="location_permission_settings">Settings</string>

    <string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
    <string name="bluetooth_disabled_info">The Bluetooth adapter is turned off. Click the button below to enable it.</string>
    <string name="bluetooth_disabled_action">Enable</string>

    <string name="blinky_guide_title">CAN\'T SEE YOUR HOPPER?</string>
    <string name="blinky_guide_info">1. Make sure the DK is <b>turned on</b> and is connected to a power source using a micro USB cable or a coin cell is plugged in.
        \n\n2. Make sure the <b>ble_app_blinky</b> firmware and SoftDevice are flashed.</string>
    <string name="blinky_guide_location_info">3. Location is turned off. Some Android phones require it enabled in order to scan for Bluetooth LE devices.
		If you are sure your hopper is advertising and it doesn\'t show up here, click the button below to enable Location.</string>
    <string name="blinky_guide_location_action">Enable</string>

    <string name="not_supported_title">DEVICE NOT SUPPORTED</string>
    <string name="not_supported_info">1. The hopper service hasn\'t been found on the device\'s attribute table.
		\n\n2. Make sure the DK is flashed with the correct firmware.
		\n\n3. If you used the DK with another firmware before, the old services might have been cached by the system.</string>
    <string name="not_supported_action">Fix and try again</string>

    <string name="state_connecting">Connecting…</string>
    <string name="state_initializing">Initializing…</string>


    <string-array name="terrain_array">
        <item>Road</item>
        <item>Gravel road</item>
        <item>Bike Park</item>
        <item>Trail</item>
        <item>Pumptrack</item>
        <item>Rock Garden</item>
    </string-array>
    <string-array name="condition_array">
        <item>Grippy</item>
        <item>Packed</item>
        <item>Muddy</item>
        <item>Dry</item>
    </string-array>
    <string-array name="sub_conditions">
        <item>Smooth</item>
        <item>Bitten</item>
        <item>Rooty</item>
        <item>Rocky</item>
        <item>Mix</item>
    </string-array>
    <string-array name="gnarly_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Insane</item>
    </string-array>
    <string-array name="navigation_drawer_items_array">
        <item>Test 1</item>
        <item>Test 2</item>
        <item>Test 3</item>
    </string-array>

</resources>